# rpgmaker-mv-ai-translate

./: .gitignore  LICENSE  README.md  design.md  pyproject.toml
.github/workflows/: python-app.yml
rpgmv_translator/: __init__.py  batch_manager.py  cache.py  cli.py  config.py  extractor.py  models.py  reinjector.py
rpgmv_translator/translators/: __init__.py  base.py  factory.py  mock.py  ollama.py  openai.py
rpgmv_translator/utils/: __init__.py  control_codes.py  file_utils.py  text_utils.py
tests/: test_batch_manager.py  test_cache.py  test_cli.py  test_config.py  test_control_codes.py  test_extractor.py  test_factory.py  test_integration.py  test_ollama.py  test_reinjector.py
